<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.sherwin.SherColorWeb</groupId>
    <artifactId>CustomerSherColorWeb</artifactId>
    <packaging>war</packaging>
    <version>2.0.0-SNAPSHOT</version>
    <name>CustomerSherColorWeb Maven Webapp</name>
    <url>http://maven.apache.org</url>
    <properties>
            <struts2.version>2.5.30</struts2.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
    		<groupId>org.freemarker</groupId>
    		<artifactId>freemarker</artifactId>
    		<version>2.3.31</version>
		</dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts2-spring-plugin</artifactId>
            <version>${struts2.version}</version>
            <exclusions>
            	<exclusion>
                	<artifactId>dom4j</artifactId>
                	<groupId>dom4j</groupId>
            	</exclusion>
        	</exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts2-json-plugin</artifactId>
            <version>${struts2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.struts</groupId>
            <artifactId>struts2-junit-plugin</artifactId>
            <version>${struts2.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jgeppert.struts2.bootstrap</groupId>
            <artifactId>struts2-bootstrap-plugin</artifactId>
            <version>4.0.1</version>
            <exclusions>
            	<exclusion>
                	<artifactId>freemarker</artifactId>
                	<groupId>freemarker</groupId>
            	</exclusion>
        	</exclusions>
        </dependency>
        <dependency>
            <groupId>com.sherwin.SherColorWeb</groupId>
            <artifactId>SherColorCommon</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sherwin.login</groupId>
            <artifactId>SherColorLogin</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-impl</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>com.redhat.jboss.support</groupId>
            <artifactId>AddCustomFilterHeader</artifactId>
            <version>1</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.lang -->
        <!-- https://mvnrepository.com/artifact/org.owasp.encoder/encoder -->
        <dependency>
            <groupId>org.owasp.encoder</groupId>
            <artifactId>encoder</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.owasp.encoder</groupId>
            <artifactId>encoder-jsp</artifactId>
            <version>1.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.sherwin.ecom.security</groupId>
            <artifactId>EcommSecurity</artifactId>
            <version>2.8.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.servlet/jboss-servlet-api_3.0_spec -->
        <dependency>
            <groupId>org.jboss.spec.javax.servlet</groupId>
            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
            <version>1.0.2.Final</version>
            <scope>provided</scope>
        </dependency>
        <!-- Changed below dependency. Potential deprecation? as it would not install -->
        <!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.servlet.jsp/jboss-jsp-api_2.2_spec -->
        <dependency>
            <groupId>org.jboss.spec.javax.servlet.jsp</groupId>
            <artifactId>jboss-jsp-api_2.2_spec</artifactId>
            <version>1.0.2.Final</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.26</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/preflight -->
		<dependency>
		    <groupId>org.apache.pdfbox</groupId>
		    <artifactId>preflight</artifactId>
		    <version>2.0.26</version>
		    <scope>test</scope>
		</dependency>
        
        <!-- create pdf tables -->
        <dependency>
            <groupId>com.github.dhorions</groupId>
            <artifactId>boxable</artifactId>
            <version>1.5</version>
        </dependency>
        <!-- old pdf maker
         <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.0.6</version>
        </dependency>
        -->
        <!-- Previous Dependency version that wouldnt install
        <dependency>
            <groupId>org.jboss.spec.javax.servlet.jsp</groupId>
            <artifactId>jboss-jsp-api_2.2_spec</artifactId>
            <version>1.0.1.Final-redhat-2</version>
            <scope>test</scope>
        </dependency>
        -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>accessors-smart</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.azure</groupId>
            <artifactId>adal4j</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.6</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.3</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>oauth2-oidc-sdk</artifactId>
            <version>9.32</version>
            <scope>runtime</scope>
            <exclusions>
            	<exclusion>
            		<groupId>net.minidev</groupId>
            		<artifactId>json-smart</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>7.9</version>
            <exclusions>
            	<exclusion>
            		<groupId>net.minidev</groupId>
            		<artifactId>json-smart</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        <dependency>
    		<groupId>com.google.zxing</groupId>
    		<artifactId>core</artifactId>
    		<version>3.3.0</version>
		</dependency>
		<dependency>
    		<groupId>com.google.zxing</groupId>
    		<artifactId>javase</artifactId>
    		<version>3.3.0</version>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <developerConnection>scm:git:https://github.com/sherwin-williams-co/colorex-shercolorweb.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <profiles>
	<profile>
            <id>sast-build</id>
            <build>
                <finalName>${project.artifactId}</finalName>
            </build>
        </profile>    
        <profile>
            <id>quality</id>
            <properties>
<!--                <sonar.coverage.exclusions>-->
<!--                    src/main/java/com/sherwin/login/domain/*PK.java-->
<!--                </sonar.coverage.exclusions>-->
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.7</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <!-- attached to Maven test phase -->
                            <execution>
                                <id>jacoco-report</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.9.1.2184</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>publish</id>
            <distributionManagement>
                <repository>
                    <id>artifactory</id>
                    <url>https://artifactory.sherwin.com/artifactory/sherwin-release-local/</url>
                </repository>
                <snapshotRepository>
                    <id>artifactory</id>
                    <url>https://artifactory.sherwin.com/artifactory/sherwin-snapshot-local/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
